--- a/configurableMenu@lestcape/locale/pt_BR.po
+++ b/configurableMenu@lestcape/locale/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-03-14 07:58-0600\n"
+"PO-Revision-Date: 2014-03-24 02:15-0600\n"
 "Last-Translator: Eliermi Cunha Junior <jpegrande@gmailcom>\n"
 "Language-Team: Eliermi Cunha Junior <jpegrande@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -17,6 +17,22 @@ msgstr ""
 "Language: PT_BR\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 1.5.4\n"
+
+#: applet.js:83 applet.js:3678 cinnamonMenu.js:536
+msgid "Execution of '%s' failed:"
+msgstr "Execution of '%s' failed:"
+
+#: applet.js:103 applet.js:3678 cinnamonMenu.js:536
+msgid "Command not found."
+msgstr "Command not found."
+
+#: applet.js:133 applet.js:3678 cinnamonMenu.js:536
+msgid "Package %s"
+msgstr "Package %s"
+
+#: applet.js:150 applet.js:3678 cinnamonMenu.js:536
+msgid "Package to install %s"
+msgstr "Package to install %s"
 
 #: applet.js:383 applet.js:3678 cinnamonMenu.js:536 applet.js:1452
 msgid "List View"
@@ -161,6 +177,10 @@ msgstr "Submenu:"
 #. configurableMenu@lestcape->settings-schema.json->header-search->description
 msgid "General search options:"
 msgstr " Opções gerais de busca:"
+
+#. configurableMenu@lestcape->settings-schema.json->header-install->description
+msgid "Installer and uninstaller tools:"
+msgstr "Installer and uninstaller tools:"
 
 #. configurableMenu@lestcape->settings-schema.json->swap-panels->description
 msgid "Swap the top and bottom panel"
@@ -831,7 +851,7 @@ msgstr "Permitir pesquisa na web com o wikipedia"
 msgid "Allows web search to the wikipedia search engine."
 msgstr "Permitir pesquisa na web com o motor de busca wikipedia."
 
-#. configurableMenu@lestcape->settings-schema.json->"search-google->description
+#. configurableMenu@lestcape->settings-schema.json->search-google->description
 msgid "Enable web search with google"
 msgstr "Permitir pesquisa na web com o Google"
 
@@ -839,10 +859,60 @@ msgstr "Permitir pesquisa na web com o Google"
 msgid "Allows web search to the google search engine."
 msgstr "Permitir pesquisa na web com o motor de busca Google."
 
-#. configurableMenu@lestcape->settings-schema.json->"search-duckduckgo->description
+#. configurableMenu@lestcape->settings-schema.json->search-duckduckgo->description
 msgid "Enable web search with duckduckgo"
 msgstr "Permitir pesquisa na web com DuckDuckGo"
 
 #. configurableMenu@lestcape->settings-schema.json->search-duckduckgo->tooltip
 msgid "Allows web search to the duckduckgo search engine."
 msgstr "Permitir pesquisa na web com o motor de busca DuckDuckGo."
+
+#. configurableMenu@lestcape->settings-schema.json->installer-tools->description
+msgid "Enable the Cinnamon Installer tool"
+msgstr "Enable the Cinnamon Installer tool"
+
+#. configurableMenu@lestcape->settings-schema.json->installer-tools->tooltip
+msgid ""
+"Allows install, uninstall and search for programs and packages(need internet "
+"connection to be download)."
+msgstr ""
+"Allows install, uninstall and search for programs and packages(need internet "
+"connection to be download)."
+
+#. configurableMenu@lestcape->settings-schema.json->installer-search->description
+msgid "Enable to search for packages"
+msgstr "Enable to search for packages"
+
+#. configurableMenu@lestcape->settings-schema.json->installer-search->tooltip
+msgid "Allows search for new packages on the repository."
+msgstr "Allows search for new packages on the repository."
+
+#. configurableMenu@lestcape->settings-schema.json->installer-update-button->description
+msgid "Update the Cinnamon Installer tool"
+msgstr "Update the Cinnamon Installer tool"
+
+#. configurableMenu@lestcape->settings-schema.json->installer-update-button->tooltip
+msgid "Press this button to update the Cinnamon Installer tool."
+msgstr "Press this button to update the Cinnamon Installer tool."
+
+#. configurableMenu@lestcape->settings-schema.json->installer-update-check->description
+msgid ""
+"Enable to check for a new version of Cinnamon Installer when the menu started"
+msgstr ""
+"Enable to check for a new version of Cinnamon Installer when the menu started"
+
+#. configurableMenu@lestcape->settings-schema.json->installer-update-check->tooltip
+msgid ""
+"Allows to check for a new version of Cinnamon Installer when the menu "
+"started."
+msgstr ""
+"Allows to check for a new version of Cinnamon Installer when the menu "
+"started."
+
+#. configurableMenu@lestcape->settings-schema.json->installer-uninstall-button->description
+msgid "Uninstall the Cinnamon Installer tool"
+msgstr "Uninstall the Cinnamon Installer tool"
+
+#. configurableMenu@lestcape->settings-schema.json->installer-uninstall-button->tooltip
+msgid "Press this button to uninstall the Cinnamon Installer tool."
+msgstr "Press this button to uninstall the Cinnamon Installer tool."
