--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,6 +1,6 @@
 Cinnamon Applet: Configurable Menu Version: v1.0-Beta
 
-Last version release date: 22 April 2014
+Last version release date: 24 April 2014
 ***
 Authors: Lester Carballo Pérez (https://github.com/lestcape) and Garibaldo (https://github.com/Garibaldo).
 Contact: lestcape@gmail.com
@@ -9,6 +9,7 @@ Special thanks to:
 
 - Bernard              (https://github.com/zagortenay333) Help adding support to the Cinnamon themes.
 - Eliermi Cunha Junior (jpegrande@gmail.com)              Help finding errors, promotion and several more things.
+- mtwebster            (https://github.com/mtwebster)     Help increasing the speed of Configurable Menu in Cinnamon 2.2.
 
 --------------
 Author of language translation:
